# ImageRestorer

./: .gitignore  CMakeLists.txt  README.md  image-restorer.sln
image-restorer/: Image.cpp  Image.h  c2.pgm  circle.pgm  image-restorer.cpp  image-restorer.vcxproj  image-restorer.vcxproj.filters  imageRemovedPixels.pgm  imageRestoredPixels.pgm  me.pgm
src/: Image.cpp  image-restorer.cpp  image-restorer.vcxproj
